crates/oxc_transform_svg_jsx/src/snapshots/oxc_transform_svg_jsx__tests__supports_title_and_desc_props.snap
---
source: crates/oxc_transform_svg_jsx/src/lib.rs
expression: result
---
import * as React from "react";
const SvgComponent = ({ title, titleId, desc, descId, ...props }) => <svg aria-labelledby={titleId} aria-describedby={descId} {...props}>{title === undefined ? <title id={titleId || "a"}>{"Hello"}</title> : title ? <title id={titleId}>{title}</title> : null}{desc === undefined ? <desc id={descId}>{"World"}</desc> : desc ? <desc id={descId}>{desc}</desc> : null}</svg>;
export default SvgComponent;
